# skeleton

./: Cargo.toml  README.md  justfile
.github/workflows/: ci.yaml  ci.yml  release.yaml
src/: arguments.rs  engine.rs  entry.rs  main.rs  path_ext.rs  search.rs  store.rs  subcommand.rs  template.rs
src/subcommand/: add.rs  apply.rs  edit.rs  list.rs  remove.rs  rename.rs
