[package]
name = "skeleton-cli"
version = "0.2.0"
description = "A project scaffolding utility"
authors = ["Liam <liam@scalzulli.com>"]
edition = "2021"
license = "CC0-1.0"
homepage = "https://github.com/terror/skeleton"
repository = "https://github.com/terror/skeleton"
categories = ["command-line-utilities"]
keywords = ["command-line", "productivity", "vim", "utility"]
resolver = "2"

[[bin]]
name = "sk"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.98"
clap = { version = "4.5.37", features = ["derive"] }
colored = "2.2.0"
dialoguer = "0.10.4"
dirs = "5.0.1"
indoc = "2.0.6"
serde_yaml = "0.9.34"
skim = "0.10.4"
tempdir = "0.3.7"
walkdir = "2.5.0"

[dev-dependencies]
executable-path = "1.0.0"
