[package]
name = "skeleton-cli"
version = "0.2.2"
description = "A project scaffolding utility"
authors = ["Liam <liam@scalzulli.com>"]
edition = "2021"
license = "CC0-1.0"
homepage = "https://github.com/terror/skeleton"
repository = "https://github.com/terror/skeleton"
categories = ["command-line-utilities"]
keywords = ["command-line", "productivity", "vim", "utility"]
resolver = "2"

[[bin]]
name = "sk"
path = "src/main.rs"

[lints.rust]
mismatched_lifetime_syntaxes = "allow"
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(fuzzing)'] }

[lints.clippy]
all = { level = "deny", priority = -1 }
arbitrary-source-item-ordering = "deny"
enum_glob_use = "allow"
ignore_without_reason = "allow"
needless_pass_by_value = "allow"
pedantic = { level = "deny", priority = -1 }
similar_names = "allow"
struct_excessive_bools = "allow"
struct_field_names = "allow"
too_many_arguments = "allow"
too_many_lines = "allow"
type_complexity = "allow"
undocumented_unsafe_blocks = "deny"
unnecessary_wraps = "allow"
wildcard_imports = "allow"

[dependencies]
anyhow = "1.0.100"
clap = { version = "4.5.53", features = ["derive"] }
colored = "3.0.0"
dialoguer = "0.12.0"
dirs = "6.0.0"
indoc = "2.0.7"
serde_yaml = "0.9.34"
skim = "0.20.5"
tempdir = "0.3.7"
walkdir = "2.5.0"

[dev-dependencies]
executable-path = "1.0.0"
